[gd_scene load_steps=49 format=2]

[ext_resource path="res://Game/World/Cats/Cat.gd" type="Script" id=1]
[ext_resource path="res://Game/World/Cats/cat-animation.png" type="Texture" id=2]
[ext_resource path="res://Game/World/Cats/cat-animation-launch.png" type="Texture" id=3]
[ext_resource path="res://Game/World/Cats/launch-particles.png" type="Texture" id=4]
[ext_resource path="res://Game/World/Cats/Outline.shader" type="Shader" id=5]
[ext_resource path="res://Game/World/Cats/dangling.png" type="Texture" id=6]
[ext_resource path="res://Game/World/Cats/cat-drinking.png" type="Texture" id=7]
[ext_resource path="res://Game/World/Cats/walking.png" type="Texture" id=8]
[ext_resource path="res://Game/World/Cats/cat-seated.png" type="Texture" id=9]

[sub_resource type="CanvasItemMaterial" id=1]
particles_animation = true
particles_anim_h_frames = 7
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="Curve" id=2]
_data = [ Vector2( 0, 1 ), 0.0, -1.0, 0, 1, Vector2( 1, 0 ), -1.0, 0.0, 1, 0 ]

[sub_resource type="CurveTexture" id=3]
curve = SubResource( 2 )

[sub_resource type="ParticlesMaterial" id=4]
emission_shape = 1
emission_sphere_radius = 5.0
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale_curve = SubResource( 3 )
anim_offset = 1.0
anim_offset_random = 1.0

[sub_resource type="ShaderMaterial" id=5]
shader = ExtResource( 5 )
shader_param/outline_color = Color( 0.286275, 0.301961, 0.494118, 1 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 2 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 2 )
region = Rect2( 80, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 2 )
region = Rect2( 96, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 2 )
region = Rect2( 112, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 2 )
region = Rect2( 128, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 2 )
region = Rect2( 144, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 2 )
region = Rect2( 160, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 2 )
region = Rect2( 176, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 2 )
region = Rect2( 192, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 2 )
region = Rect2( 208, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 2 )
region = Rect2( 224, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 8 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 8 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 6 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 6 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 6 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 7 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 3 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 3 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 3 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 9 )
region = Rect2( 0, 0, 16, 25 )

[sub_resource type="SpriteFrames" id=34]
animations = [ {
"frames": [ SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 21 ), SubResource( 22 ), SubResource( 23 ) ],
"loop": true,
"name": "walking",
"speed": 5.0
}, {
"frames": [ SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ) ],
"loop": true,
"name": "grabbed",
"speed": 5.0
}, {
"frames": [ SubResource( 28 ), SubResource( 28 ), SubResource( 28 ), SubResource( 29 ) ],
"loop": true,
"name": "drinking",
"speed": 2.0
}, {
"frames": [ SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ) ],
"loop": true,
"name": "shooting",
"speed": 5.0
}, {
"frames": [ SubResource( 39 ) ],
"loop": true,
"name": "seated",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=35]

[sub_resource type="CircleShape2D" id=36]
radius = 7.0

[sub_resource type="CircleShape2D" id=37]

[sub_resource type="CircleShape2D" id=38]

[node name="Cat" type="Node2D"]
script = ExtResource( 1 )

[node name="LaunchParticles" type="Particles2D" parent="."]
material = SubResource( 1 )
emitting = false
amount = 120
local_coords = false
process_material = SubResource( 4 )
texture = ExtResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
material = SubResource( 5 )
frames = SubResource( 34 )
animation = "idle"
frame = 10
playing = true

[node name="MouseClickBox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="MouseClickBox"]
visible = false
shape = SubResource( 35 )

[node name="BounceArea" type="Area2D" parent="."]
visible = false
position = Vector2( -1, 1 )
collision_layer = 1024
collision_mask = 1024

[node name="CollisionShape2D" type="CollisionShape2D" parent="BounceArea"]
shape = SubResource( 36 )

[node name="CollectionArea" type="Area2D" parent="."]
visible = false
collision_layer = 2048
collision_mask = 2048

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollectionArea"]
position = Vector2( -1, 1 )
shape = SubResource( 37 )

[node name="MagnetArea" type="Area2D" parent="."]
visible = false
collision_layer = 2048
collision_mask = 2048

[node name="CollisionShape2D" type="CollisionShape2D" parent="MagnetArea"]
position = Vector2( -1, 1 )
shape = SubResource( 38 )

[node name="SwitchIdleWalkTimer" type="Timer" parent="."]
one_shot = true
autostart = true
[connection signal="input_event" from="MouseClickBox" to="." method="_on_MouseClickBox_input_event"]
[connection signal="area_entered" from="BounceArea" to="." method="_on_BounceArea_area_entered"]
[connection signal="area_entered" from="CollectionArea" to="." method="_on_CollectionArea_area_entered"]
[connection signal="area_entered" from="MagnetArea" to="." method="_on_MagnetArea_area_entered"]
[connection signal="area_exited" from="MagnetArea" to="." method="_on_MagnetArea_area_exited"]
[connection signal="timeout" from="SwitchIdleWalkTimer" to="." method="_on_SwitchIdleWalkTimer_timeout"]
